sock-store/ingressroute/frontend-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: front-end
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sock-shop.example.com`)
    kind: Rule
    services:
    - name: front-end
      port: 80
  tls:
    certResolver: sample
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: front-end-insecure
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sock-shop.example.com`)
    kind: Rule
    services:
    - name: front-end
      port: 80
